poprawione nazwy plików z scss, wersja finalna

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -25,10 +25,12 @@
 
 	&__text {
 		margin-bottom: 0.6em;
+		color: #424242;
 	}
 
 	&__company {
 		text-align: center;
 		line-height: 3em;
+		color: #424242;
 	}
 }
