--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,9 @@
 @use './nav.scss' as *;
 @use './footer.scss' as *;
 @use './contact.scss' as *;
-// @use './media.scss' as *;
+@use './moreoffer-nav' as *;
+@use './medium' as *;
+@use './large' as *;
 
 * {
 	box-sizing: border-box;
@@ -20,6 +22,10 @@ body {
 	font-size: 1.6rem;
 	// background-color: rgb(180, 178, 36);
 	overflow-x: hidden;
+}
+
+.no-scroll {
+	overflow: hidden;
 }
 
 .aboutus {
@@ -87,7 +93,7 @@ body {
 	text-align: center;
 
 	h2 {
-		margin: 1.4em;
+		margin: 2.4em;
 		font-weight: normal;
 		text-decoration: underline;
 	}
@@ -186,249 +192,8 @@ body {
 	}
 }
 
-// MEDIA QUERRIES=============
+// .white-section{
+// 	background-color: #fff;
+// }
 
-@media (min-width: 768px) {
-	h2 {
-		font-size: 3.8rem;
-	}
 
-	.nav__btn {
-		right: 20%;
-	}
-
-	header {
-		// width: 107%;
-		background-image: url(../img/jungle-big.jpg);
-		p,
-		h1 {
-			top: 43%;
-			margin: 0em 0.3em;
-			font-size: 3rem;
-		}
-
-		h1 {
-			font-size: 3.5rem;
-			margin-top: 0.5em;
-		}
-	}
-
-	.aboutus {
-		.aboutus__desktop {
-			display: inline-block;
-			background-position: center;
-			// height: 500px;
-		}
-
-		.aboutus__mobile {
-			display: none;
-		}
-
-		h3 {
-			font-size: 2.7rem;
-			margin-top: 1em;
-		}
-
-		&__text {
-			font-size: 2rem;
-			padding: 1em;
-			line-height: 2em;
-		}
-	}
-
-	.hero-img {
-		background-image: url(../img/girl-big.jpg);
-		background-size: cover;
-	}
-
-	.hero-img {
-		.hero-img__title {
-			font-size: 3.2rem;
-		}
-	}
-
-	.offer {
-		.offer__text {
-			font-size: 2rem;
-		}
-
-		.offer__title {
-			font-size: 3rem;
-			margin-top: 0.7em;
-		}
-
-		.offer__price {
-			font-size: 4.6rem;
-		}
-
-		.offer__items {
-			left: 33%;
-			margin-bottom: 1.5em;
-		}
-
-		.offer__options {
-			font-size: 2rem;
-		}
-
-		.offer__btn {
-			width: 50%;
-			font-size: 2rem;
-			margin-bottom: 1.3em;
-		}
-	}
-
-	.footer {
-		.footer__name {
-			font-size: 4.2rem;
-			padding: 1em;
-		}
-
-		.footer__heading {
-			font-size: 2.7rem;
-			margin: 1.5em 0em 0.7em 0em;
-		}
-
-		.footer__text {
-			font-size: 2.4rem;
-			margin-bottom: 1em;
-		}
-
-		.footer__company {
-			font-size: 2.5rem;
-		}
-	}
-}
-
-// LARGE (992px)
-
-@media (min-width: 992px) {
-	.nav {
-		background-color: #ffffff;
-		padding: 0em;
-		.nav__btn {
-			display: none;
-		}
-
-		.nav__items {
-			font-size: 2rem;
-			display: inline-block;
-			width: 100%;
-
-			p {
-				display: inline-block;
-				margin: 0;
-				font-size: 4rem;
-
-				i {
-					margin-right: 10px;
-				}
-			}
-
-			.nav__links {
-				display: flex;
-				margin-top: 0;
-				ul {
-					cursor: auto;
-					width: 100%;
-					list-style: none;
-
-					li {
-						cursor: pointer;
-						margin-left: 10px;
-						display: inline-block;
-						margin-top: 0em;
-						padding: 2em 1em;
-						transition: background 0.3s;
-					}
-					li:hover {
-						color: #ffffff;
-						background-color: rgb(0, 0, 0);
-					}
-				}
-
-				#first {
-					margin-left: 300px;
-				}
-			}
-		}
-	}
-
-	.aboutus {
-		.aboutus__wrapper {
-			display: flex;
-			margin: 0 100px 55px 0;
-			// width: 100%;
-			// max-width: 1200px;
-		}
-
-		.aboutus__container {
-			margin-left: 2.3em;
-			display: inline-block;
-			width: 55%;
-			.aboutus__title {
-				margin-top: 0;
-				text-align: left;
-				padding-left: 0.6em;
-			}
-
-			.aboutus__text {
-				font-size: 1.8rem;
-			}
-		}
-
-		img {
-			width: 450px;
-			height: 300px;
-			// min-height: auto;
-			// width: 50%;
-		}
-	}
-}
-
-// EXTRA LARGE=============
-
-@media (min-width: 1200px) {
-	header {
-		.header__container {
-			position: relative;
-			left: -175px;
-		}
-		min-height: 65vh;
-		background-position: 5% 65%;
-		p,
-		h1 {
-			text-align: left;
-			font-size: 4.2rem;
-			color: #ffffff;
-		}
-
-		h1 {
-			margin-top: 0;
-			font-size: 5rem;
-		}
-	}
-
-	.aboutus {
-		img{
-			width: 600px;
-			height: 400px;
-		}
-		.aboutus__wrapper {
-			display: flex;
-			justify-content: center;
-		}
-		.aboutus__container {
-			width: 40%;
-		}
-		.aboutus__title{
-			font-size: 3rem;
-		}
-		
-	}
-	.nav {
-		.nav__items {
-			font-size: 2.3rem;
-		}
-	}
-
-}
