--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -67,7 +67,7 @@
 		span {
 			font-weight: bold;
 		}
-		.form__map-text {
+		.form__box-map {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -214,6 +214,3 @@
 		top: 30px;
 	}
 }
-// .form__btn:hover{
-// background-color: #333;
-// }
