--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -51,7 +51,6 @@
 	}
 
 	.form__box {
-		// min-height: 65vh;
 		background-color: #968776;
 		width: 100%;
 		display: flex;
@@ -79,18 +78,23 @@
 			height: 90px;
 			border-radius: 8px;
 			margin-bottom: 1em;
+			box-shadow: 2px 2px 1px 1px rgba(94, 81, 28, 0.514);
 		}
 		.form__box-heading {
 			font-size: 2rem;
 			margin-bottom: 1em;
+			padding: .1em;
+			span{
+				text-decoration: underline;
+			}
 		}
 
 		#map {
-
 			height: 420px;
 			width: 80%;
 			border-radius: 8px;
-			box-shadow: 2px 2px 10px 2px rgb(139, 139, 139);
+			// box-shadow: 2px 2px 10px 2px rgb(139, 139, 139);
+			box-shadow: 2px 2px 1px 2px rgba(94, 81, 28, 0.514);
 			margin-bottom: 4em;
 		}
 		.form__adress {
