--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -20,22 +20,39 @@
 
 .form {
 	background-color: #968776;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 
-	.form__title {
-		font-size: 3.7rem;
-		text-align: center;
-		margin-top: 1.5em;
-		text-decoration: underline;
-		background-color: #968776;
+
+	.form__hero-shadow{
+		position: absolute;
 		width: 100%;
-		height: 5em;
-		line-height: 5em;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.527);
 	}
+	.form__hero-img {
+		position: relative;
+		min-height: 50vh;
+		width: 100%;
+		background-image: url(../img/letters-big.jpg);
+		background-position: center;
+
+		.form__title {
+			position: absolute;
+			top: 50%;
+			transform: translate(0% -50%);
+			font-size: 4.5rem;
+			text-align: center;
+			text-shadow: 1px 1px 10px rgba(27, 27, 27, 0.788);
+			letter-spacing: .1em;
+			color: #fff;
+			width: 100%;
+			z-index: 10;
+		}
+	}
+
 
 	.icons {
 		margin-bottom: 2em;
@@ -51,11 +68,12 @@
 	}
 
 	.form__box {
-		background-color: #968776;
-		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		width: 100%;
+		margin-top: 3em;
+		background-color: #968776;
 
 		.form__contact-data {
 			display: flex;
