--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -141,6 +141,14 @@
 	}
 
 	.form {
+
+
+		.form__hero-shadow{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.527);
+		}
 		.form__hero-img {
 			min-height: 50vh;
 			width: 100%;
@@ -152,7 +160,15 @@
 			}
 		}
 		.form__title {
+			position: absolute;
+			top: 50%;
+			transform: translate(0% -50%);
+			color: #fff;
+			text-shadow: 1px 1px 15px rgb(27, 27, 27);
+			letter-spacing: .1em;
+			font-size: 7rem;
 			text-decoration: none;
+	
 		}
 		.form__box {
 			flex-direction: column;
