--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -30,7 +30,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(0, 0, 0, 0.527);
+		background-color: rgb(0 0 0 / 41%);
 	}
 	.form__hero-img {
 		position: relative;
@@ -45,7 +45,7 @@
 			transform: translate(0% -50%);
 			font-size: 4.5rem;
 			text-align: center;
-			text-shadow: 1px 1px 10px rgba(27, 27, 27, 0.788);
+			// text-shadow: 1px 1px 10px rgba(27, 27, 27, 0.788);
 			letter-spacing: .1em;
 			color: #fff;
 			width: 100%;
@@ -111,7 +111,6 @@
 			height: 420px;
 			width: 80%;
 			border-radius: 8px;
-			// box-shadow: 2px 2px 10px 2px rgb(139, 139, 139);
 			box-shadow: 2px 2px 1px 2px rgba(94, 81, 28, 0.514);
 			margin-bottom: 4em;
 		}
